@@ -114,16 +114,19 @@ $lerr = &virtual_server_limits(\%newdom, $oldd);
 
 # Check if quota makes sense for reseller
 if ($d->{'reseller'} && defined(&get_reseller)) {
-	$r = &get_reseller($d->{'reseller'});
-	if (!$d->{'parent'} &&
-	    ($newdom{'quota'} eq '' || $newdom{'quota'} eq '0') &&
-	    $r && $r->{'acl'}->{'max_quota'}) {
-		&error(&text('save_erquota', $d->{'reseller'}));
-		}
-	if (!$d->{'parent'} &&
-	    ($newdom{'bw_limit'} eq '' || $newdom{'bw_limit'} eq '0') &&
-	    $r && $r->{'acl'}->{'max_bw'}) {
-		&error(&text('save_erbw', $d->{'reseller'}));
+	foreach my $r (split(/\s+/, $d->{'reseller'})) {
+		$rinfo = &get_reseller($r);
+		next if (!$rinfo);
+		if (!$d->{'parent'} &&
+		    ($newdom{'quota'} eq '' || $newdom{'quota'} eq '0') &&
+		    $rinfo->{'acl'}->{'max_quota'}) {
+			&error(&text('save_erquota', $r));
+			}
+		if (!$d->{'parent'} &&
+		    ($newdom{'bw_limit'} eq '' || $newdom{'bw_limit'} eq '0') &&
+		    $rinfo->{'acl'}->{'max_bw'}) {
+			&error(&text('save_erbw', $r));
+			}
 		}
 	}
 
