@@ -15609,16 +15609,18 @@ foreach my $ad (@aliases) {
 	}
 }
 
-# get_dns_ip([reseller])
+# get_dns_ip([reseller-name-list])
 # Returns the IP address for use in DNS records, or undef to use the domain's IP
 sub get_dns_ip
 {
 local ($reselname) = @_;
-if ($reselname && defined(&get_reseller)) {
+if (defined(&get_reseller)) {
 	# Check if the reseller has an external IP
-	local $resel = &get_reseller($reselname);
-	if ($resel && $resel->{'acl'}->{'defdnsip'}) {
-		return $resel->{'acl'}->{'defdnsip'};
+	foreach my $r (split(/\s+/, $reselname)) {
+		local $resel = &get_reseller($r);
+		if ($resel && $resel->{'acl'}->{'defdnsip'}) {
+			return $resel->{'acl'}->{'defdnsip'};
+			}
 		}
 	}
 if ($config{'dns_ip'} eq '*') {
