@@ -1442,3 +1442,4 @@ Added Norwegian translation updates, thanks to Stein-Aksel Basma.
 Aliases and redirects can now be separately enabled for the SSL and non-SSL websites of a virtual server.
 The Change IP Addresses	page can now be used to update the external DNS address of multiple virtual servers, as well as the actual address.
 Alias servers can now be re-pointed to a different target, using the Move Virtual Server page or the move-domain API command.
+A single virtual server can now be owned by multiple resellers, each of whom has permissions to manage it. This can be useful if reseller accounts are used as an additional layer of administrative control in Virtualmin.
